# iota-c-light-wallet

./: .gitignore  CMakeLists.txt  Makefile  demo.py
Ledger-Test-Env/Ledger-Test-Env/: .gitignore  CMakeLists.txt  test_kerl.c  test_kerl.h  word_converter_test.c
src/: aux.c  aux.h  main.c  main.h  ui.h  usbd_hid_impl.c
src/iota/: addresses.c  common.h  transfers.c  transfers.h
